app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-monty-sans);
  --font-mono: var(--font-anton-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}
.gradientBg {
  background: radial-gradient(
    rgb(116, 111, 142) 0%,
    hsla(248, 21%, 15%, 1) 100%
  );
}
.glassBg {
  background: rgb(234, 234, 234);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3);
}
input:focus {
  border: none;
  outline: none;
  box-shadow: 1px 1px 3px oklch(0.87 0 0), -1px -1px 3px oklch(0.87 0 0);
}

